fix(utils): clear project-Xlint javac warnings batch 1 (#2016)
Clear all 23 main-source javac warnings under project -Xlint in modules/utils
(rawtypes on workflow role info, this-escape via final classes / direct field
init, AccessController/Long removal deprecations, switch fall-through, try
resource, serial List field, missing @Deprecated). Main compile is warning-clean;
module clean install green. Residual: test-source warnings and suppressed main
rawtypes/unchecked for follow-up batches on #2016.

Partial for #2016. Parent #2200.

> Co-Authored by Grok Build using grok-4.5 with agent main.